--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT = 4000
-Mongodb_url =mongodb+srv://ecommerce420:ecommerce420@ecommerce.wk6qld1.mongodb.net
+MONGO_URI=mongodb+srv://ecommerce99:ecommerce99@cluster0.kiqxqqz.mongodb.net
